syntax="proto3";

option go_package="github.com/huynhminhtruong/go-store-services/book-service/src/services/book";

message CreateBookRequest {
    string title = 1;
    string author = 2;
    string publish_year = 3;
}

message CreateBookResponse {
    int64 book_id = 1;
}

message GetBookRequest {
    int64 book_id = 1;
}

message GetBookResponse {
    string title = 1;
    string author = 2;
    string publish_year = 3;   
}

message ListBooksRequest {}

message ListBooksResponse {
    repeated GetBookResponse books = 1;
}

service BookService {
    rpc Create(CreateBookRequest) returns (CreateBookResponse){}
    rpc GetBook(GetBookRequest) returns (GetBookResponse) {}
    rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {}
}
